--- a/src/views/agent/EmployeeContact.ejs
+++ b/src/views/agent/EmployeeContact.ejs
@@ -1,106 +1,139 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/resert.css">
-    <link rel="stylesheet" href="/css/agent/EmployeeContact.css">
-    <link rel="stylesheet" href="/fontawesome-free-6.2.1-web/css/all.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/css/resert.css" />
+    <link rel="stylesheet" href="/css/agent/EmployeeContact.css" />
+    <link rel="stylesheet" href="/fontawesome-free-6.2.1-web/css/all.css" />
+    <style>
+      #GFG {
+        text-decoration: none;
+      }
+      a {
+        color: black;
+      }
+    </style>
     <title>List of Contract</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <section>
-        <nav class="Navbar">
-            <img id="logo" src="/images/LOGO.png" alt="this is logo">
-            <ul class="Navbar-Directory">
-                <li class="Navbar-Directory-item">Home</li>
-                <li class="Navbar-Directory-item">Partner</li>
-                <li class="Navbar-Directory-item">Contract</li>
-                <li class="Navbar-Directory-item">About us</li>
-            </ul>
+      <nav class="Navbar">
+        <img id="logo" src="/images/pic/logo.png" alt="this is logo" />
+        <ul class="Navbar-Directory">
+          <a href="/accb_food.vn/nhanvien/employee_partner" id="GFG">
+            <li class="Navbar-Directory-item">Partner</li>
+          </a>
+          <li>
+            <!--
+                @@
+            -->
+          </li>
+          <a href="/accb_food.vn/nhanvien/" id="GFG">
+            <li class="Navbar-Directory-item">Contract</li>
+          </a>
+        </ul>
+        <div class="Navbar-Search">
+          <input
+            class="Navbar-Search-input"
+            type="search"
+            placeholder="Search"
+          />
+          <button class="Navbar-Search-btn">
+            <span>
+              <i class="fa-solid fa-search"></i>
+            </span>
+          </button>
+        </div>
 
-            <div class="Navbar-Search">
-                <input class="Navbar-Search-input" type="search" placeholder="Search">
-                <button class="Navbar-Search-btn">
-                    <span>
-                        <i class="fa-solid fa-search"></i>
-                    </span>
-                </button>
-            </div>
-
-            <div class="Nav-Subnav">
-                <div class="Nav-Subnav-love">
-                    <i class="fa-regular fa-heart"></i>
-                </div>
-                <div class="Nav-Subnav-cart">
-                    <i class="fa-sharp fa-solid fa-cart-plus"></i>
-                </div>
-                <div class="Nav-Subnav-account">
-                    <i class="fa-regular fa-user"></i>
-                </div>
-            </div>
-        </nav>
+        <div class="Nav-Subnav">
+          <!-- <div class="Nav-Subnav-love">
+                      <i class="fa-regular fa-heart"></i>
+                  </div>
+                  <div class="Nav-Subnav-cart">
+                      <i class="fa-sharp fa-solid fa-cart-plus"></i>
+                  </div> -->
+          <div class="Nav-Subnav-account">
+            <form action="/accb_food.vn/nhanvien/profile">
+              <button>
+                <i class="fa-regular fa-user"></i>
+              </button>
+            </form>
+          </div>
+          <div class="Nav-Subnav-account">
+            <form action="/process_sign_out">
+              <button>
+                <i class="fa-solid fa-arrow-right-from-bracket"></i>
+              </button>
+            </form>
+          </div>
+        </div>
+      </nav>
     </section>
 
-    <div class="go_back">
-        <button type="submit">
-            <i class="fa-solid fa-arrow-left"></i>
-            List of contract
-        </button>
-    </div>
+    <section>
+      <div class="go_back">
+        <!--
+          @@
+        -->
+      </div>
+    </section>
 
     <section>
-        <div class="container">
-            <div class="Title">
-                <span>Our Contract</span>
-                <span>LIST OF CONTRACT</span>
+      <div class="container">
+        <div class="Title">
+          <span>Our Contract</span>
+          <span>LIST OF CONTRACT</span>
+        </div>
+        <div class="list">
+          <% for(let i=0; i<dataContracts.lenght; i++){ %>
+          <div class="contract">
+            <div class="left_contract">
+              <img src="/images/pic/pic-3.png" alt="" />
             </div>
-            <div class="list">
-                <div class="contract">
-                    <div class="left_contract">
-                        <img src="/images/pic-3.png" alt="">
-                    </div>
-                    <div class="right_contract">
-                        <div class="top_right_contract">
-                            <span class="name">
-                                Delicious Food Inc
-                            </span>
-                            <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum quasi rerum corporis
-                                atque accusamus voluptate libero voluptatem in nesciunt et! Totam ipsa repellendus vel
-                                ea a? Nesciunt eligendi dolorum error.
-                            </span>
-                        </div>
-                        <div class="bottom_right_contract">
-                            <!-- <div class="signin_date">
-                                <span>Contract signing date:</span>
-                                <span>10/01/2022</span>
-                            </div>
-                            <div class="expired_date">
-                                <span>Contract term:</span>
-                                <span>24/12/2022</span>
-                            </div> -->
-                            <div class="btn">
-                                <div class="left_btn">
-                                    <button>Details</button>
+            <div class="right_contract">
+              <div class="top_right_contract">
+                <span class="name"> <%=dataContracts[i].HSDK_TENQUAN%> </span>
+                <span> <%=dataContracts[i].HSDK_LOAIAMTHUC%> </span>
+              </div>
+              <div class="bottom_right_contract">
+                <!-- <div class="signin_date">
+                                    <span>Contract signing date:</span>
+                                    <span>10/01/2022</span>
                                 </div>
-                                <!-- <div class="right_btn">
-                                    <button>Details</button>
+                                <div class="expired_date">
+                                    <span>Contract term:</span>
+                                    <span>24/12/2022</span>
                                 </div> -->
-                            </div>
-                        </div>
+                <div class="btn">
+                  <form
+                    action="/accb_food.vn/nhanvien/contract_detail/id/<%=dataContracts[i].HSDK_MA%>"
+                  >
+                    <div class="left_btn">
+                      <button>Details</button>
                     </div>
+                  </form>
+                  <!-- <div class="right_btn">
+                                        <button>Details</button>
+                                    </div> -->
                 </div>
+              </div>
             </div>
+          </div>
+          <% } %>
+        </div>
+      </div>
     </section>
 
     <footer>
-        <span>Copyright © 2022 ACCB Food Inc.</span>
+      <span>Copyright © 2022 ACCB Food Inc.</span>
     </footer>
 
-    <script src="https://kit.fontawesome.com/9382b228af.js" crossorigin="anonymous"></script>
-</body>
-
+    <script
+      src="https://kit.fontawesome.com/9382b228af.js"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
