--- a/src/views/cart.ejs
+++ b/src/views/cart.ejs
@@ -30,10 +30,7 @@
             <a href="/accb_food.vn" underline="none">Home</a>
           </li>
           <li class="Navbar-Directory-item">Dishes</li>
-          <li class="Navbar-Directory-item">Menu</li>
           <li class="Navbar-Directory-item">Review</li>
-          <li class="Navbar-Directory-item">Order</li>
-          <li class="Navbar-Directory-item">About us</li>
         </ul>
 
         <div class="Navbar-Search">
@@ -62,6 +59,14 @@
             <a href="/accb_food.vn/profile">
                 <i class="fa-regular fa-user"></i>
             </a>
+          </div>
+
+          <div class="Nav-Subnav-love">
+            <form action="/process_sign_out">
+                <button>
+                  <i class="fa-solid fa-arrow-right-from-bracket"></i>
+                </button>
+              </form>
         </div>
         </div>
       </nav>
