--- a/src/views/driver/orders.ejs
+++ b/src/views/driver/orders.ejs
@@ -7,18 +7,32 @@
     <link rel="stylesheet" href="/css/resert.css" />
     <link rel="stylesheet" href="/css/driver/orders.css" />
     <link rel="stylesheet" href="/fontawesome-free-6.2.1-web/css/all.css" />
+
+    <style>
+      #GFG {
+          text-decoration: none;
+      }
+      a { 
+        color: black;
+      }
+    </style>
+
     <title>Orders</title>
   </head>
 
   <body>
     <section>
       <nav class="Navbar">
-        <img id="logo" src="/images/LOGO.png" alt="this is logo" />
+        <img id="logo" src="/images/pic/logo.png" alt="this is logo" />
         <ul class="Navbar-Directory">
-          <li class="Navbar-Directory-item">Home</li>
-          <li class="Navbar-Directory-item">Partner</li>
-          <li class="Navbar-Directory-item">Wallet</li>
-          <li class="Navbar-Directory-item">About us</li>
+    
+          <li class="Navbar-Directory-item">
+            <a href="/accb_food.vn/taixe/" id="GFG">Order</a>
+          </li>
+          <li class="Navbar-Directory-item">
+            <a href="/accb_food.vn/taixe/wallet" id="GFG">Wallet</a>
+          </li>
+
         </ul>
         <div class="Navbar-Search">
           <input
@@ -35,18 +49,22 @@
 
         <div class="Nav-Subnav">
           <div class="Nav-Subnav-account">
-            <i class="fa-regular fa-user"></i>
+            <a href="/accb_food.vn/taixe/profile">
+              <i class="fa-regular fa-user"></i>
+            </a>
           </div>
+          <div class="Nav-Subnav-love">
+            <form action="/process_sign_out">
+                <button>
+                  <i class="fa-solid fa-arrow-right-from-bracket"></i>
+                </button>
+              </form>
+        </div>
         </div>
       </nav>
     </section>
 
-    <div class="go_back">
-      <button type="submit">
-        <i class="fa-solid fa-arrow-left"></i>
-        Orders List
-      </button>
-    </div>
+    <div class="go_back"></div>
 
     <section>
       <div class="UNCONFIRMED_ORDER">
@@ -56,44 +74,44 @@
             <span>SELECT A SHIPPING ORDER</span>
           </div>
           <div class="list">
-            <div class="cart">
-              <div class="left_cart">
-                <div class="detail_icon">
-                  <i class="fa-regular fa-eye"></i>
-                </div>
-                <img src="/images/dish-1.png" alt="" />
-              </div>
-              <div class="right_cart">
-                <div class="stars">
-                  <i class="fa-regular fa-star"></i>
-                  <i class="fa-regular fa-star"></i>
-                  <i class="fa-regular fa-star"></i>
-                  <i class="fa-regular fa-star"></i>
-                  <i class="fa-regular fa-star"></i>
-                </div>
-                <span class="name_menu">Thực đơn</span>
-                <span class="name_food">Hambuger</span>
-                <span class="detail"
-                  >Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                  Libero cumque voluptates, modi officia animi quidem, totam
-                  rerum ratione est saepe adipisci repellat non illo tempore
-                  dicta dignissimos sunt dolor accusantium.</span
-                >
-                <span class="quantity">x1</span>
-                <div class="bottom_cart">
-                  <span
-                    >Totals cost:
-                    <span
-                      >$
-                      <span> 265,68 </span>
-                    </span>
-                  </span>
-                  <div class="status">
-                    <button>Accept</button>
+            <%for(let i=0; i<dataOrders.length; i++){%>
+              <%if(dataOrders[i].DH_TINHTRANG!='Đang giao' && dataOrders[i].DH_TINHTRANG!='Đã hủy'){ %>
+                <div class="cart">
+                  <div class="left_cart">
+                    <img src="/images/pic/logo.png" alt="" />
+                  </div>
+                  <div class="right_cart">
+                    <div class="stars">
+                      <i class="fa-regular fa-star"></i>
+                      <i class="fa-regular fa-star"></i>
+                      <i class="fa-regular fa-star"></i>
+                      <i class="fa-regular fa-star"></i>
+                      <i class="fa-regular fa-star"></i>
+                    </div>
+                    <span class="name_order"><%=dataOrders[i].DH_MA%></span>
+                    <div class="bottom_cart">
+                      <span
+                        >Totals cost:
+                        <span
+                          >$
+                          <span> <%=dataOrders[i].DH_TONGTIEN%> </span>
+                        </span>
+                      </span>
+                      <div class="status">
+                        <span
+                          >Delivery status:
+                          <span><%=dataOrders[i].DH_TINHTRANG%></span>
+                        </span>
+                        <form action="/accb_food.vn/taixe/accept_order/id/<%=dataDriver[0].TX_MA%>" method="post">
+                          <input type="hidden" name="id_dh" value="<%=dataOrders[i].DH_MA%>">
+                          <button>Accept</button>
+                        </form>
+                      </div>
+                    </div>
                   </div>
                 </div>
-              </div>
-            </div>
+              <%}%>
+            <%}%>
           </div>
         </div>
       </div>
