--- a/src/publics/css/driver/info.css
+++ b/src/publics/css/driver/info.css
@@ -206,7 +206,7 @@ body {
     opacity: 0.7;
 }
 
-.bottom_left_container span {
+.bottom_left_container input {
     display: flex;
     width: 100%;
     background-color: var(--blue_white);
@@ -255,7 +255,7 @@ body {
     border-radius: 50%;
 }
 
-.right_container span {
+.right_container input {
     display: flex;
     align-items: center;
     justify-content: center;
