--- a/src/views/agent/EmployeePartner.ejs
+++ b/src/views/agent/EmployeePartner.ejs
@@ -8,49 +8,80 @@
     <link rel="stylesheet" href="/css/resert.css">
     <link rel="stylesheet" href="/css/agent/EmployeePartner.css">
     <link rel="stylesheet" href="/fontawesome-free-6.2.1-web/css/all.css">
+    <style>
+        #GFG {
+            text-decoration: none;
+        }
+        a { 
+          color: black;
+        }
+    </style>
     <title>List of Partner</title>
 </head>
 
 <body>
     <section>
         <nav class="Navbar">
-            <img id="logo" src="/images/LOGO.png" alt="this is logo">
-            <ul class="Navbar-Directory">
-                <li class="Navbar-Directory-item">Home</li>
-                <li class="Navbar-Directory-item">Partner</li>
-                <li class="Navbar-Directory-item">Contract</li>
-                <li class="Navbar-Directory-item">About us</li>
-            </ul>
-
-            <div class="Navbar-Search">
-                <input class="Navbar-Search-input" type="search" placeholder="Search">
-                <button class="Navbar-Search-btn">
-                    <span>
-                        <i class="fa-solid fa-search"></i>
-                    </span>
+          <img id="logo" src="/images/pic/logo.png" alt="this is logo" />
+          <ul class="Navbar-Directory">
+            <a href="/accb_food.vn/nhanvien/employee_partner" id="GFG">
+              <li class="Navbar-Directory-item">Partner</li>
+            </a>
+            <li>
+                <!--
+                    @@
+                -->
+            </li>
+            <a href="/accb_food.vn/nhanvien/" id="GFG">
+              <li class="Navbar-Directory-item">Contract</li>
+            </a>
+          </ul>
+          <div class="Navbar-Search">
+            <input
+              class="Navbar-Search-input"
+              type="search"
+              placeholder="Search"
+            />
+            <button class="Navbar-Search-btn">
+              <span>
+                <i class="fa-solid fa-search"></i>
+              </span>
+            </button>
+          </div>
+  
+          <div class="Nav-Subnav">
+            <!-- <div class="Nav-Subnav-love">
+                      <i class="fa-regular fa-heart"></i>
+                  </div>
+                  <div class="Nav-Subnav-cart">
+                      <i class="fa-sharp fa-solid fa-cart-plus"></i>
+                  </div> -->
+            <div class="Nav-Subnav-account">
+              <form action="/accb_food.vn/nhanvien/profile">
+                <button>
+                  <i class="fa-regular fa-user"></i>
                 </button>
+              </form>
             </div>
-
-            <div class="Nav-Subnav">
-                <div class="Nav-Subnav-love">
-                    <i class="fa-regular fa-heart"></i>
-                </div>
-                <div class="Nav-Subnav-cart">
-                    <i class="fa-sharp fa-solid fa-cart-plus"></i>
-                </div>
-                <div class="Nav-Subnav-account">
-                    <i class="fa-regular fa-user"></i>
-                </div>
+            <div class="Nav-Subnav-account">
+              <form action="/process_sign_out">
+                <button>
+                  <i class="fa-solid fa-arrow-right-from-bracket"></i>
+                </button>
+              </form>
             </div>
+            
+          </div>
         </nav>
-    </section>
+      </section>
 
-    <div class="go_back">
-        <button type="submit">
-            <i class="fa-solid fa-arrow-left"></i>
-            List of partner
-        </button>
-    </div>
+    <section>
+        <div class="go_back">
+          <!--
+            @@
+          -->
+        </div>
+    </section>
 
     <section>
         <div class="container">
@@ -59,40 +90,40 @@
                 <span>LIST OF Partner</span>
             </div>
             <div class="list">
-                <div class="contract">
-                    <div class="left_contract">
-                        <img src="/images/pic-3.png" alt="">
-                    </div>
-                    <div class="right_contract">
-                        <div class="top_right_contract">
-                            <span class="name">
-                                Delicious Food Inc
-                            </span>
-                            <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum quasi rerum corporis
-                                atque accusamus voluptate libero voluptatem in nesciunt et! Totam ipsa repellendus vel
-                                ea a? Nesciunt eligendi dolorum error.
-                            </span>
+                <% for(let i=0; i<dataPartners.length; i++){ %>
+                    <div class="contract">
+                        <div class="left_contract">
+                            <img src="/images/pic/pic-3.png" alt="">
                         </div>
-                        <div class="bottom_right_contract">
-                            <div class="signin_date">
-                                <span>Contract signing date:</span>
-                                <span>10/01/2022</span>
+                        <div class="right_contract">
+                            <div class="top_right_contract">
+                                <span class="name">
+                                    <%=dataPartners[i].DT_TEN%>
+                                </span>
                             </div>
-                            <div class="expired_date">
-                                <span>Contract term:</span>
-                                <span>24/12/2022</span>
-                            </div>
-                            <div class="btn">
-                                <div class="left_btn">
-                                    <button>Contact</button>
+                            <div class="bottom_right_contract">
+                                <div class="signin_date">
+                                    <span>Contract signing date:</span>
+                                    <span>10/01/2022</span>
                                 </div>
-                                <!-- <div class="right_btn">
-                                    <button>Details</button>
-                                </div> -->
+                                <div class="expired_date">
+                                    <span>Contract term:</span>
+                                    <span>24/12/2022</span>
+                                </div>
+                                <div class="btn">
+                                   <form action="#">
+                                    <div class="left_btn">
+                                        <button>Contact</button>
+                                    </div>
+                                   </form>
+                                    <!-- <div class="right_btn">
+                                        <button>Details</button>
+                                    </div> -->
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
+                <% } %>
             </div>
     </section>
 
