--- a/src/views/driver/Wallet.ejs
+++ b/src/views/driver/Wallet.ejs
@@ -8,18 +8,29 @@
     <link rel="stylesheet" href="/css/resert.css">
     <link rel="stylesheet" href="/css/driver/Wallet.css">
     <link rel="stylesheet" href="/fontawesome-free-6.2.1-web/css/all.css">
+
+    <style>
+        #GFG {
+            text-decoration: none;
+        }
+        a { 
+          color: black;
+        }
+      </style>
     <title>Wallet</title>
 </head>
 
 <body>
     <section>
         <nav class="Navbar">
-            <img id="logo" src="/images/LOGO.png" alt="this is logo">
+            <img id="logo" src="/images/pic/logo.png" alt="this is logo">
             <ul class="Navbar-Directory">
-                <li class="Navbar-Directory-item">Home</li>
-                <li class="Navbar-Directory-item">Partner</li>
-                <li class="Navbar-Directory-item">Wallet</li>
-                <li class="Navbar-Directory-item">About us</li>
+                <li class="Navbar-Directory-item">
+                    <a href="/accb_food.vn/taixe/" id="GFG">Order</a>
+                  </li>
+                  <li class="Navbar-Directory-item">
+                    <a href="/accb_food.vn/taixe/wallet" id="GFG">Wallet</a>
+                  </li>
             </ul>
             <div class="Navbar-Search">
                 <input class="Navbar-Search-input" type="search" placeholder="Search">
@@ -32,17 +43,25 @@
 
             <div class="Nav-Subnav">
                 <div class="Nav-Subnav-account">
-                    <i class="fa-regular fa-user"></i>
+                    <a href="/accb_food.vn/taixe/profile">
+                        <i class="fa-regular fa-user"></i>
+                    </a>
+                </div>
+                <div class="Nav-Subnav-love">
+                    <form action="/process_sign_out">
+                        <button>
+                          <i class="fa-solid fa-arrow-right-from-bracket"></i>
+                        </button>
+                      </form>
                 </div>
             </div>
         </nav>
     </section>
 
     <div class="go_back">
-        <button type="submit">
-            <i class="fa-solid fa-arrow-left"></i>
-            Wallet
-        </button>
+        <!--
+            @@
+        -->
     </div>
 
     <span class="Title">My wallet</span>
@@ -57,7 +76,7 @@
                         <span>Current Rates: </span>
                         <div class="price">
                             <span>$</span>
-                            <span>1,000.68</span>
+                            <span><%=cost%></span>
                         </div>
                     </div>
                     <div class="sales">
@@ -89,9 +108,9 @@
                 </div>
             </div>
             <div class="right_info">
-                <img src="/images/pic-3.png" alt="This is avatar">
-                <span>Hoang Cau</span>
-                <span>hoangcau14783@gmail.com</span>
+                <!--
+                    @@
+                -->
             </div>
         </div>
     </section>
@@ -103,43 +122,39 @@
                     <span>YOUR ACTIVITY STATISTICS</span>
                 </div>
                 <div class="list">
-                    <div class="cart">
-                        <div class="left_cart">
-                            <div class="detail_icon">
-                                <i class="fa-regular fa-eye"></i>
+                    <%for(let i=0; i<dataOrders.length; i++){ %>
+                          <div class="cart">
+                            <div class="left_cart">
+                              <img src="/images/pic/logo.png" alt="" />
                             </div>
-                            <img src="/images/dish-1.png" alt="">
-                        </div>
-                        <div class="right_cart">
-                            <div class="stars">
+                            <div class="right_cart">
+                              <div class="stars">
                                 <i class="fa-regular fa-star"></i>
                                 <i class="fa-regular fa-star"></i>
                                 <i class="fa-regular fa-star"></i>
                                 <i class="fa-regular fa-star"></i>
                                 <i class="fa-regular fa-star"></i>
-                            </div>
-                            <span class="name_menu">Thực đơn</span>
-                            <span class="name_food">Hambuger</span>
-                            <span class="detail">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero cumque
-                                voluptates, modi
-                                officia animi quidem, totam rerum ratione est saepe adipisci repellat non illo tempore
-                                dicta
-                                dignissimos sunt dolor accusantium.</span>
-                            <span class="quantity">x1</span>
-                            <div class="bottom_cart">
-                                <span>Totals cost:
-                                    <span>$
-                                        <span>
-                                            265,68
-                                        </span>
-                                    </span>
+                              </div>
+                              <span class="name_order"><%=dataOrders[i].DH_MA%></span>
+                              <div class="bottom_cart">
+                                <span
+                                  >Totals cost:
+                                  <span
+                                    >$
+                                    <span> <%=dataOrders[i].DH_TONGTIEN%> </span>
+                                  </span>
                                 </span>
                                 <div class="status">
-                                    <span>Completed</sp>
+                                  <span
+                                    >Delivery status:
+                                    <span><%=dataOrders[i].DH_TINHTRANG%></span>
+                                  </span>
+                                  
                                 </div>
+                              </div>
                             </div>
-                        </div>
-                    </div>
+                          </div>
+                      <%}%>
                 </div>
             </div>
         </div>
