--- a/src/views/driver/signup.ejs
+++ b/src/views/driver/signup.ejs
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link rel="stylesheet" href="/fontawesome-free-6.2.1-web/css/all.css" />
-    <link rel="stylesheet" href="/css/driver/signup.css" />
     <link rel="stylesheet" href="/css/resert.css" />
+    <link rel="stylesheet" href="/css/driver/signup.css" />
     <title>Sign Up</title>
   </head>
 
@@ -18,14 +18,18 @@
           <i class="fa-solid fa-arrow-left"></i>
           Sign In
         </button>
-        <img src="/images/LOGO.png" alt="This is logo" />
+        <img src="/images/pic/logo.png" alt="This is logo" />
       </nav>
 
       <div class="container">
         <div class="left__container">
-          <img src="/images/signup.png" alt="" />
+          <img src="/images/pic/signup.png" alt="" />
         </div>
-        <form action="" class="form__container">
+        <form
+          action="/accb_food.vn/taixe/sign_upDriver"
+          class="form__container"
+          method="POST"
+        >
           <div class="top_form">
             <span>Wellcome to focus</span>
             <span>Register your account</span>
@@ -34,23 +38,23 @@
           <div class="middle_form">
             <div class="item">
               <label for="">Your name <label for="">*</label></label>
-              <input type="text" placeholder="Enter your name" />
+              <input type="text" placeholder="Enter your name" name="name" />
             </div>
 
             <div class="gelder">
-              <input type="radio" id="male" name="fav_language" value="Nam" />
+              <input type="radio" id="male" name="sex" value="Nam" />
               <label for="Nam">Male</label><br />
-              <input type="radio" id="Femal" name="fav_language" value="Nu" />
+              <input type="radio" id="Femal" name="sex" value="Nu" />
               <label for="Nu">Femal</label><br />
             </div>
 
             <div class="item">
               <label for="">Your ID<label for="">*</label></label>
-              <input type="text" placeholder="Enter your ID" />
+              <input type="text" placeholder="Enter your ID" name="id" />
             </div>
             <div class="item">
               <label for="">Your email<label for="">*</label></label>
-              <input type="email" placeholder="Enter your email" />
+              <input type="email" placeholder="Enter your email" name="email" />
             </div>
 
             <div class="item">
@@ -59,18 +63,101 @@
             </div>
 
             <div class="item">
+              <label for="">tỉnh<label for="">*</label></label>
+              <select
+                name="DC_MATINH"
+                id="DC_TENTINH"
+                aria-label=".form-select-sm example"
+              >
+                <option value="">chọn tỉnh</option>
+                <% for(var count=0; count < dataConscious.length; count++) { %>
+                <option value="<%= dataConscious[count].DC_MATINH%>">
+                  <%= dataConscious[count].DC_TENTINH%>
+                </option>
+                <% }%>
+              </select>
+            </div>
+
+            <div class="item">
+              <label for="">huyện<label for="">*</label></label>
+              <select
+                name="DC_MAHUYEN"
+                id="DC_TENHUYEN"
+                aria-label=".form-select-sm example"
+              >
+                <option value="">chọn huyện</option>
+                <% for(var count=0; count < dataConscious.length; count++) { %>
+                <option value="<%= dataConscious[count].DC_MAHUYEN%>">
+                  <%= dataConscious[count].DC_TENHUYEN%>
+                </option>
+                <% }%>
+              </select>
+            </div>
+
+            <div class="item">
+              <label for="">xã<label for="">*</label></label>
+              <select
+                name="DC_MAXA"
+                id="DC_TENXA"
+                aria-label=".form-select-sm example"
+              >
+                <option value="">chọn xã</option>
+                <% for(var count=0; count < dataConscious.length; count++) { %>
+                <option value="<%= dataConscious[count].DC_MAXA%>">
+                  <%= dataConscious[count].DC_TENXA%>
+                </option>
+                <% }%>
+              </select>
+            </div>
+
+            <div class="item">
               <label for="">Your phone number<label for="">*</label></label>
-              <input type="text" placeholder="Enter your phone number" />
+              <input
+                type="text"
+                placeholder="Enter your phone number"
+                name="phone"
+              />
+            </div>
+
+            <div class="item">
+              <label for="">license plate<label for="">*</label></label>
+              <input
+                type="text"
+                placeholder="Enter your license plate"
+                name="licensePlate"
+              />
+            </div>
+
+            <div class="item">
+              <label for="">Bank<label for="">*</label></label>
+              <input type="text" placeholder="Enter your Bank" name="bank" />
+            </div>
+
+            <div class="item">
+              <label for="">Bank account number<label for="">*</label></label>
+              <input
+                type="text"
+                placeholder="Enter your Bank account number"
+                name="bankNumber"
+              />
             </div>
 
             <div class="item">
               <label for="">Your user name<label for="">*</label></label>
-              <input type="text" placeholder="Enter your user name" />
+              <input
+                type="text"
+                placeholder="Enter your user name"
+                name="userName"
+              />
             </div>
 
             <div class="item">
               <label for="">Your password<label for="">*</label></label>
-              <input type="password" placeholder="Enter your password" />
+              <input
+                type="password"
+                placeholder="Enter your password"
+                name="pass"
+              />
             </div>
 
             <div class="item">
@@ -95,10 +182,5 @@
     <footer>
       <span>Copyright © 2022 ACCB Food Inc.</span>
     </footer>
-
-    <script
-      src="https://kit.fontawesome.com/9382b228af.js"
-      crossorigin="anonymous"
-    ></script>
   </body>
 </html>
