--- a/src/views/fooddetail.ejs
+++ b/src/views/fooddetail.ejs
@@ -77,7 +77,7 @@
         </div>
         <div class="food_details">
           <div class="left_food_details">
-            <img src="/images/foods/dish-1.png" alt="" />
+            <img src="<%=dataFood[0].MAN_IMGPATH%>" alt="" />
             <div class="stars">
               <i class="fa-regular fa-star"></i>
               <i class="fa-regular fa-star"></i>
@@ -88,28 +88,19 @@
           </div>
           <div class="right_food_details">
             <div class="top_right_food_details">
-              <div class="name_partner">
-                <span>Partner: </span>
-                <span>Delicious Food Inc</span>
-              </div>
               <div class="name_menu">
                 <span>Menu: </span>
-                <span>Delicious Food Menu</span>
+                <span><%dataMenu[0].TD_TEN%></span>
               </div>
 
               <div class="name_food">
                 <span>Food: </span>
-                <span>Hamburger</span>
+                <span><%=dataFood[0].MAN_TEN%></span>
               </div>
 
               <div class="details">
                 <span>Details: </span>
-                <span>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum
-                  odit fuga repellat optio, beatae dolor molestiae iste odio
-                  ratione voluptas dolore quas. Eligendi quis dolore,
-                  repudiandae beatae voluptates aspernatur error.
-                </span>
+                <span> <%=dataFood[0].MAN_MIEUTA%> </span>
               </div>
             </div>
 
@@ -119,15 +110,20 @@
                 <div class="price">
                   <span>Price:</span>
                   <span>$</span>
-                  <span class="price_food">15,99</span>
+                  <span class="price_food"><%=dataFood[0].MAN_GIA%></span>
                 </div>
               </div>
               <div class="bottom_btn">
                 <div class="order_btn">
-                  <button>Order now</button>
-                </div>
-                <div class="btn_cart">
-                  <i class="fa-sharp fa-solid fa-cart-plus"></i>
+                  <form
+                    action="/accb_food.vn/addto_cart/id/'<%= dataFood[0].MAN_MA %>'"
+                    method="GET"
+                  >
+                    <button>
+                      Add to cart
+                      <i class="fa-sharp fa-solid fa-cart-plus"></i>
+                    </button>
+                  </form>
                 </div>
               </div>
             </div>
