--- a/src/views/orders.ejs
+++ b/src/views/orders.ejs
@@ -27,12 +27,11 @@
       <nav class="Navbar">
         <img id="logo" src="/images/pic/logo.png" alt="this is logo" />
         <ul class="Navbar-Directory">
-          <li class="Navbar-Directory-item">Home</li>
+          <li class="Navbar-Directory-item">
+            <a href="/accb_food.vn" underline="none">Home</a>
+          </li>
           <li class="Navbar-Directory-item">Dishes</li>
-          <li class="Navbar-Directory-item">Menu</li>
-          <li class="Navbar-Directory-item">Review</li>
           <li class="Navbar-Directory-item">Order</li>
-          <li class="Navbar-Directory-item">About us</li>
         </ul>
 
         <div class="Navbar-Search">
@@ -62,6 +61,13 @@
                   <i class="fa-regular fa-user"></i>
               </a>
           </div>
+          <div class="Nav-Subnav-love">
+            <form action="/process_sign_out">
+                <button>
+                  <i class="fa-solid fa-arrow-right-from-bracket"></i>
+                </button>
+              </form>
+        </div>
       </div>
       </nav>
     </section>
