--- a/src/views/partner/Branch.ejs
+++ b/src/views/partner/Branch.ejs
@@ -8,21 +8,49 @@
     <link rel="stylesheet" href="/css/resert.css">
     <link rel="stylesheet" href="/css/partner/Branch.css">
     <link rel="stylesheet" href="/fontawesome-free-6.2.1-web/css/all.css">
+
+    <style>
+        #GFG {
+            text-decoration: none;
+        }
+        a { 
+          color: black;
+        }
+      </style>
+
     <title>Menu</title>
 </head>
 
 <body>
     <section>
         <nav class="Navbar">
-            <img id="logo" src="/images/LOGO.png" alt="this is logo">
+            <img id="logo" src="/images/pic/logo.png" alt="this is logo">
             <ul class="Navbar-Directory">
-                <li class="Navbar-Directory-item">Home</li>
-                <li class="Navbar-Directory-item">Shop</li>
-                <li class="Navbar-Directory-item">Branch</li>
-                <li class="Navbar-Directory-item">Order</li>
-                <li class="Navbar-Directory-item">Contract</li>
+
+                <li class="Navbar-Directory-item">
+                  <a href="/accb_food.vn/doitac" id="GFG">Home</a>
+                </li>
+
+                <li class="Navbar-Directory-item">
+                  <a href="/accb_food.vn/doitac/shop" id="GFG">Shop</a>
+                </li>
+      
+                <li class="Navbar-Directory-item">
+                  <a href="/accb_food.vn/doitac/branch" id="GFG">Branch</a>
+                </li>
+                
+                <li class="Navbar-Directory-item">
+                  <a href="/accb_food.vn/doitac/orders" id="GFG">Order</a>
+                </li>
+      
+                <!--
+          <li class="Navbar-Directory-item">
+            <a href="/accb_food.vn/doitac/part_contracts" id="GFG">Contract</a>
+          </li>
+          -->
+                
                 <li class="Navbar-Directory-item">About us</li>
-            </ul>
+              </ul>
             <div class="Navbar-Search">
                 <input class="Navbar-Search-input" type="search" placeholder="Search">
                 <button class="Navbar-Search-btn">
@@ -34,51 +62,24 @@
 
             <div class="Nav-Subnav">
                 <div class="Nav-Subnav-account">
-                    <i class="fa-regular fa-user"></i>
+                  <form action="/process_sign_out">
+                    <button>
+                      <i class="fa-solid fa-arrow-right-from-bracket"></i>
+                    </button>
+                  </form>
                 </div>
-            </div>
+              </div>
         </nav>
     </section>
 
     <div class="go_back">
-        <button type="submit">
-            <i class="fa-solid fa-arrow-left"></i>
-            Branch
-        </button>
+        <form action="/accb_food.vn/doitac">
+            <button type="submit">
+                <i class="fa-solid fa-arrow-left"></i>
+                Home
+            </button>
+        </form>
     </div>
-
-    <section>
-        <div class="info">
-            <div class="tag_info">
-                <div class="top_tag-info">
-                    <img src="/images/home-img-3.png" alt="">
-                </div>
-                <div class="bottom_top_container">
-                    <div class="info">
-                        <label for="">Name Branch</label>
-                        <span>ACCB Food</span>
-                    </div>
-                    <div class="info">
-                        <label for="">Branch Address</label>
-                        <span>KTX khu B, DHQG TP.HCM</span>
-                    </div>
-                    <div class="info">
-                        <label for="">Number Of Orders/Day</label>
-                        <span>500</span>
-                    </div>
-                    <div class="info">
-                        <label for="">Operating Status</label>
-                        <span>Openning</span>
-                    </div>
-                    <div class="info">
-                        <label for="">Uptime</label>
-                        <span>9am to 18pm</span>
-                    </div>
-                    <button>Edit</button>
-                </div>
-            </div>
-        </div>
-    </section>
     <section>
         <div class="shopping_cart">
             <div class="top_cart">
@@ -88,57 +89,51 @@
                     </span>
                     <span>TODAY’S SPECIALITY</span>
                 </div>
-                <div class="list_dishes">
-                    <div class="tag_dishes">
-                        <div class="top_tag_dishes">
-                            <div class="detail_icon">
-                                <i class="fa-regular fa-eye"></i>
-                            </div>
-                            <div class="detail_icon">
-                                <i class="fa-solid fa-xmark"></i>
-                            </div>
-                        </div>
-                        <img src="/images/dish-1.png" alt="">
-                        <div class="bottom_tag_dishes">
-                            <div class="stars">
-                                <div>
-                                    <i class="fa-regular fa-star"></i>
-                                    <i class="fa-regular fa-star"></i>
-                                    <i class="fa-regular fa-star"></i>
-                                    <i class="fa-regular fa-star"></i>
-                                    <i class="fa-regular fa-star"></i>
+                <div class="list_dishes"> 
+                    <% if(dataFoodsofBranch.lenght!=0){ %>
+                        <% for(let i=0; i<dataFoodsofBranch.length; i++){ %>
+                            <div class="tag_dishes">
+                                <div class="top_tag_dishes">
+                                    <div class="detail_icon">
+                                        <i class="fa-regular fa-eye"></i>
+                                    </div>
+                                    <div class="detail_icon">
+                                        <form action="/accb_food.vn/doitac/branch/xoamonan/id_mn/<%=dataFoodsofBranch[i].MAN_MA%>" method="post">
+                                            <input type="hidden" value="<%=dataBranch[0].CN_MA%>" name="MA_CN">
+                                            <button>
+                                                <i class="fa-solid fa-xmark"></i>
+                                            </button>
+                                        </form>
+                                    </div>
+                                </div>
+                                <img src="<%=dataFoodsofBranch[i].MAN_IMGPATH%>" alt="">
+                                <div class="bottom_tag_dishes">
+                                    <div class="details">
+                                        <span class="name_food">
+                                            <%=dataFoodsofBranch[i].MAN_TEN%>
+                                        </span>
+                                        <span>
+                                            <%=dataFoodsofBranch[i].MAN_MIEUTA%>
+                                        </span>
+                                    </div>
+                                    <div class="btn_bottom">
+                                        
+                                        <span class="price">$
+                                            <input type="number" value="<%=dataFoodsofBranch[i].MAN_GIA%>">
+                                            </input>
+                                        </span>
+                                        
+                                    </div>
                                 </div>
                             </div>
-                            <div class="details">
-                                <span class="name_food">
-                                    Delicious Food
-                                </span>
-                                <span>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit voluptatibus
-                                    veritatis nisi atque magnam amet ducimus dicta neque ad, non placeat quos. Cum id
-                                    nisi
-                                    repellendus consequatur voluptate, commodi reprehenderit!
-                                </span>
-                            </div>
-                            <div class="btn_bottom">
-                                <button>
-                                    <i class="fa-solid fa-minus"></i>
-                                </button>
-                                <span class="price">$
-                                    <input type="number" value="15.99">
-                                    </input>
-                                </span>
-                                <button>
-                                    <i class="fa-solid fa-plus"></i>
-                                </button>
-                            </div>
-                        </div>
-
-                    </div>
-
+                        <% } %> 
+                    <% } %>
                     <div class="add_dishes">
-                        <button>
-                            <i class="fa-solid fa-plus"></i>
-                        </button>
+                        <form action="/accb_food.vn/doitac/add_food/id/<%=dataBranch[0].CN_MA%>">
+                            <button style="cursor: pointer;">
+                                <i class="fa-solid fa-plus" ></i>
+                            </button>
+                        </form>
                     </div>
                 </div>
             </div>
