--- a/src/views/partner/ContractDetails.ejs
+++ b/src/views/partner/ContractDetails.ejs
@@ -131,7 +131,9 @@
           <span>Contract term:</span>
           <span>24/12/2022</span>
         </div>
-        <button class="btn_renew">Renewal</button>
+        <form action="/accb_food.vn/doitac/renew_contract">
+          <button class="btn_renew">Renewal</button>
+        </form>
       </div>
     </section>
     <footer>
