--- a/src/views/partner/RenewContract.ejs
+++ b/src/views/partner/RenewContract.ejs
@@ -13,7 +13,7 @@
   <body>
     <section>
       <nav class="Navbar">
-        <img id="logo" src="/images/LOGO.png" alt="this is logo" />
+        <img id="logo" src="/images/pic/logo.png" alt="this is logo" />
         <ul class="Navbar-Directory">
           <li class="Navbar-Directory-item">Home</li>
           <li class="Navbar-Directory-item">Shop</li>
@@ -69,7 +69,7 @@
           <div class="bottom_top-Title">
             <div class="top_title">
               <span>Contract</span>
-              <img src="/images/pic-2.png" alt="" />
+              <img src="/images/pic/pic-2.png" alt="" />
             </div>
             <div class="bottom_top_container">
               <div class="info">
