--- a/src/views/partner/orders.ejs
+++ b/src/views/partner/orders.ejs
@@ -7,19 +7,42 @@
     <link rel="stylesheet" href="/css/resert.css" />
     <link rel="stylesheet" href="/css/partner/orders.css" />
     <link rel="stylesheet" href="/fontawesome-free-6.2.1-web/css/all.css" />
+
+    <style>
+      #GFG {
+        text-decoration: none;
+      }
+      a {
+        color: black;
+      }
+    </style>
+
     <title>Orders</title>
   </head>
 
   <body>
     <section>
       <nav class="Navbar">
-        <img id="logo" src="/images/LOGO.png" alt="this is logo" />
+        <img id="logo" src="/images/pic/LOGO.png" alt="this is logo" />
         <ul class="Navbar-Directory">
-          <li class="Navbar-Directory-item">Home</li>
-          <li class="Navbar-Directory-item">Shop</li>
-          <li class="Navbar-Directory-item">Branch</li>
-          <li class="Navbar-Directory-item">Order</li>
-          <li class="Navbar-Directory-item">Contract</li>
+          <li class="Navbar-Directory-item">
+            <a href="/accb_food.vn/doitac" id="GFG">Home</a>
+          </li>
+
+          <li class="Navbar-Directory-item">
+            <a href="/accb_food.vn/doitac/shop" id="GFG">Shop</a>
+          </li>
+
+          <li class="Navbar-Directory-item">
+            <a href="/accb_food.vn/doitac/orders" id="GFG">Order</a>
+          </li>
+
+          <!--
+          <li class="Navbar-Directory-item">
+            <a href="/accb_food.vn/doitac/part_contracts" id="GFG">Contract</a>
+          </li>
+          -->
+
           <li class="Navbar-Directory-item">About us</li>
         </ul>
         <div class="Navbar-Search">
@@ -37,7 +60,11 @@
 
         <div class="Nav-Subnav">
           <div class="Nav-Subnav-account">
-            <i class="fa-regular fa-user"></i>
+            <form action="/process_sign_out">
+              <button>
+                <i class="fa-solid fa-arrow-right-from-bracket"></i>
+              </button>
+            </form>
           </div>
         </div>
       </nav>
@@ -58,206 +85,43 @@
             <span>Track Your Orders</span>
           </div>
           <div class="list">
-            <div class="cart">
-              <div class="left_cart">
-                <div class="detail_icon">
-                  <i class="fa-regular fa-eye"></i>
-                </div>
-                <img src="/images/dish-1.png" alt="" />
-              </div>
-              <div class="right_cart">
-                <div class="stars">
-                  <i class="fa-regular fa-star"></i>
-                  <i class="fa-regular fa-star"></i>
-                  <i class="fa-regular fa-star"></i>
-                  <i class="fa-regular fa-star"></i>
-                  <i class="fa-regular fa-star"></i>
-                </div>
-                <span class="name_menu">Thực đơn</span>
-                <span class="name_food">Hambuger</span>
-                <span class="detail"
-                  >Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                  Libero cumque voluptates, modi officia animi quidem, totam
-                  rerum ratione est saepe adipisci repellat non illo tempore
-                  dicta dignissimos sunt dolor accusantium.</span
-                >
-                <span class="quantity">x1</span>
-                <div class="bottom_cart">
-                  <span
-                    >Totals cost:
-                    <span
-                      >$
-                      <span> 265,68 </span>
-                    </span>
-                  </span>
-                  <div class="status">
-                    <span
-                      >Delivery status:
-                      <span>Unconfirmed</span>
-                    </span>
-                    <!-- <button>Cancel</button> -->
+            <%for(let i=0; i<dataOrders.length; i++){%>
+              <%if(dataOrders[i].DH_TINHTRANG!='Đã hủy'){ %>
+                <div class="cart">
+                  <div class="left_cart">
+                    <img src="/images/pic/logo.png" alt="" />
+                  </div>
+                  <div class="right_cart">
+                    <div class="stars">
+                      <i class="fa-regular fa-star"></i>
+                      <i class="fa-regular fa-star"></i>
+                      <i class="fa-regular fa-star"></i>
+                      <i class="fa-regular fa-star"></i>
+                      <i class="fa-regular fa-star"></i>
+                    </div>
+                    <span class="name_order"><%=dataOrders[i].DH_MA%></span>
+                    <div class="bottom_cart">
+                      <span
+                        >Totals cost:
+                        <span
+                          >$
+                          <span> <%=dataOrders[i].DH_TONGTIEN%> </span>
+                        </span>
+                      </span>
+                      <div class="status">
+                        <span
+                          >Delivery status:
+                          <span><%=dataOrders[i].DH_TINHTRANG%></span>
+                        </span>
+                        <form action="/accb_food.vn/doitac/cancel_order/id/<%=dataOrders[i].DH_MA%>" method="post">
+                          <button>Cancel</button>
+                        </form>
+                      </div>
+                    </div>
                   </div>
                 </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="ORDER_IN_TRANSIT">
-        <div class="container">
-          <div class="top">
-            <span>Your Orders</span>
-            <span>Orders In Transit</span>
-          </div>
-          <div class="list">
-            <div class="cart">
-              <div class="left_cart">
-                <div class="detail_icon">
-                  <i class="fa-regular fa-eye"></i>
-                </div>
-                <img src="/images/dish-1.png" alt="" />
-              </div>
-              <div class="right_cart">
-                <div class="stars">
-                  <i class="fa-regular fa-star"></i>
-                  <i class="fa-regular fa-star"></i>
-                  <i class="fa-regular fa-star"></i>
-                  <i class="fa-regular fa-star"></i>
-                  <i class="fa-regular fa-star"></i>
-                </div>
-                <span class="name_menu">Thực đơn</span>
-                <span class="name_food">Hambuger</span>
-                <span class="detail"
-                  >Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                  Libero cumque voluptates, modi officia animi quidem, totam
-                  rerum ratione est saepe adipisci repellat non illo tempore
-                  dicta dignissimos sunt dolor accusantium.</span
-                >
-                <span class="quantity">x1</span>
-                <div class="bottom_cart">
-                  <span
-                    >Totals cost:
-                    <span
-                      >$
-                      <span> 265,68 </span>
-                    </span>
-                  </span>
-                  <div class="status">
-                    <span
-                      >Delivery status:
-                      <span>Delivering</span>
-                    </span>
-                    <!-- <button>Cancel</button> -->
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="ORDER_FULFILLED">
-        <div class="container">
-          <div class="top">
-            <span>Your Orders</span>
-            <span>ORDER FULFILLED</span>
-          </div>
-          <div class="list">
-            <div class="cart">
-              <div class="left_cart">
-                <div class="detail_icon">
-                  <i class="fa-regular fa-eye"></i>
-                </div>
-                <img src="/images/dish-1.png" alt="" />
-              </div>
-              <div class="right_cart">
-                <div class="stars">
-                  <i class="fa-regular fa-star"></i>
-                  <i class="fa-regular fa-star"></i>
-                  <i class="fa-regular fa-star"></i>
-                  <i class="fa-regular fa-star"></i>
-                  <i class="fa-regular fa-star"></i>
-                </div>
-                <span class="name_menu">Thực đơn</span>
-                <span class="name_food">Hambuger</span>
-                <span class="detail"
-                  >Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                  Libero cumque voluptates, modi officia animi quidem, totam
-                  rerum ratione est saepe adipisci repellat non illo tempore
-                  dicta dignissimos sunt dolor accusantium.</span
-                >
-                <span class="quantity">x1</span>
-                <div class="bottom_cart">
-                  <span
-                    >Totals cost:
-                    <span
-                      >$
-                      <span> 265,68 </span>
-                    </span>
-                  </span>
-                  <div class="status">
-                    <span
-                      >Delivery status:
-                      <span>Completed</span>
-                    </span>
-                    <!-- <button>Cancel</button> -->
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="CANCELLED_ORDER">
-        <div class="container">
-          <div class="top">
-            <span>Your Orders</span>
-            <span>Track Your Orders</span>
-          </div>
-          <div class="list">
-            <div class="cart">
-              <div class="left_cart">
-                <div class="detail_icon">
-                  <i class="fa-regular fa-eye"></i>
-                </div>
-                <img src="/images/dish-1.png" alt="" />
-              </div>
-              <div class="right_cart">
-                <div class="stars">
-                  <i class="fa-regular fa-star"></i>
-                  <i class="fa-regular fa-star"></i>
-                  <i class="fa-regular fa-star"></i>
-                  <i class="fa-regular fa-star"></i>
-                  <i class="fa-regular fa-star"></i>
-                </div>
-                <span class="name_menu">Thực đơn</span>
-                <span class="name_food">Hambuger</span>
-                <span class="detail"
-                  >Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                  Libero cumque voluptates, modi officia animi quidem, totam
-                  rerum ratione est saepe adipisci repellat non illo tempore
-                  dicta dignissimos sunt dolor accusantium.</span
-                >
-                <span class="quantity">x1</span>
-                <div class="bottom_cart">
-                  <span
-                    >Totals cost:
-                    <span
-                      >$
-                      <span> 265,68 </span>
-                    </span>
-                  </span>
-                  <div class="status">
-                    <span
-                      >Delivery status:
-                      <span>Cancelled</span>
-                    </span>
-                    <!-- <button>Cancel</button> -->
-                  </div>
-                </div>
-              </div>
-            </div>
+              <%}%>
+            <%}%>
           </div>
         </div>
       </div>
