--- a/src/views/partner/shop.ejs
+++ b/src/views/partner/shop.ejs
@@ -7,19 +7,42 @@
     <link rel="stylesheet" href="css/resert.css" />
     <link rel="stylesheet" href="/css/partner/shop.css" />
     <link rel="stylesheet" href="/fontawesome-free-6.2.1-web/css/all.css" />
+
+    <style>
+      #GFG {
+        text-decoration: none;
+      }
+      a {
+        color: black;
+      }
+    </style>
+
     <title>Shop</title>
   </head>
 
   <body>
     <section>
       <nav class="Navbar">
-        <img id="logo" src="/images/LOGO.png" alt="this is logo" />
+        <img id="logo" src="/images/pic/logo.png" alt="this is logo" />
         <ul class="Navbar-Directory">
-          <li class="Navbar-Directory-item">Home</li>
-          <li class="Navbar-Directory-item">Shop</li>
-          <li class="Navbar-Directory-item">Branch</li>
-          <li class="Navbar-Directory-item">Order</li>
-          <li class="Navbar-Directory-item">Contract</li>
+          <li class="Navbar-Directory-item">
+            <a href="/accb_food.vn/doitac" id="GFG">Home</a>
+          </li>
+
+          <li class="Navbar-Directory-item">
+            <a href="/accb_food.vn/doitac/shop" id="GFG">Shop</a>
+          </li>
+
+          <li class="Navbar-Directory-item">
+            <a href="/accb_food.vn/doitac/orders" id="GFG">Order</a>
+          </li>
+
+          <!--
+          <li class="Navbar-Directory-item">
+            <a href="/accb_food.vn/doitac/part_contracts" id="GFG">Contract</a>
+          </li>
+          -->
+
           <li class="Navbar-Directory-item">About us</li>
         </ul>
         <div class="Navbar-Search">
@@ -36,14 +59,12 @@
         </div>
 
         <div class="Nav-Subnav">
-          <!-- <div class="Nav-Subnav-love">
-                    <i class="fa-regular fa-heart"></i>
-                </div>
-                <div class="Nav-Subnav-cart">
-                    <i class="fa-sharp fa-solid fa-cart-plus"></i>
-                </div> -->
           <div class="Nav-Subnav-account">
-            <i class="fa-regular fa-user"></i>
+            <form action="/process_sign_out">
+              <button>
+                <i class="fa-solid fa-arrow-right-from-bracket"></i>
+              </button>
+            </form>
           </div>
         </div>
       </nav>
@@ -59,69 +80,44 @@
     </section>
 
     <section>
-      <div class="top">
-        <div class="top_top">
-          <span>Our Shope</span>
-          <span>ACCB FOOD Inc</span>
-        </div>
-
-        <div class="bottom_top">
-          <div class="bottom_top-Title">
-            <div class="top_title">
-              <span>My shop</span>
-              <span>Manage profile information for account security</span>
-            </div>
-            <div class="bottom_top_container">
-              <div class="info">
-                <label for="">Email</label>
-                <span>work@email</span>
+      <form action="/accb_food.vn/doitac/edit_shop" method="POST">
+        <div class="top">
+          <div class="top_top">
+            <span>Our Shope</span>
+            <span>ACCB FOOD Inc</span>
+          </div>
+          <div class="bottom_top">
+            <div class="bottom_top-Title">
+              <div class="top_title">
+                <span>My shop</span>
+                <span>Manage profile information for account security</span>
               </div>
-              <div class="info">
-                <label for="">Shop name</label>
-                <span>ACCB Food</span>
-              </div>
-              <div class="info">
-                <label for="">Representatives</label>
-                <span>Hoang Van Cau</span>
-              </div>
-              <div class="info">
-                <label for="">City</label>
-                <span>TP.HCM</span>
-              </div>
-              <div class="info">
-                <label for="">County</label>
-                <span>VietNam</span>
-              </div>
-              <div class="info">
-                <label for="">Number Of Branches</label>
-                <span>3</span>
-              </div>
-              <div class="info">
-                <label for="">Number Of Orders/Day</label>
-                <span>500</span>
-              </div>
-              <div class="info">
-                <label for="">Type Of Cuisine</label>
-                <span>Noodle</span>
-              </div>
-              <div class="info">
-                <label for="">Business Address</label>
-                <span>KTX khu B, DHQG TP.HCM</span>
-              </div>
-              <div class="info">
-                <label for="">Phone Number</label>
-                <span>0123456789</span>
-              </div>
-              <div class="info">
-                <label for="">Operating Status</label>
-                <span>Opening</span>
-              </div>
-
-              <button>Edit</button>
+                <div class="bottom_top_container">
+                  <div class="info">
+                    <label for="">Email</label>
+                    <span>accb_food@gmail.com</span>
+                  </div>
+    
+                  <div class="info">
+                    <label for="">Shop name</label>
+                    <input value="<%=dataStore[0].CH_TEN%>" name="name"></input>
+                  </div>
+      
+                  <div class="info">
+                    <label for="">Phone Number</label>
+                    <input value="<%=dataStore[0].CH_SDT%>" name="number_phone"></input>
+                  </div>
+                  <div class="info">
+                    <label for="">Operating Status</label>
+                    <input value="<%=dataStore[0].CH_TINHTRANGHOATDONG%>" name="tinhtrang"></input>
+                  </div>
+    
+                  <button>Edit</button>
+                </div>
             </div>
           </div>
         </div>
-      </div>
+      </form>
     </section>
 
     <section>
