--- a/src/views/profile.ejs
+++ b/src/views/profile.ejs
@@ -22,10 +22,11 @@
         <nav class="Navbar">
             <img id="logo" src="/images/pic/logo.png" alt="this is logo">
             <ul class="Navbar-Directory">
-                <li class="Navbar-Directory-item">Home</li>
+                <li class="Navbar-Directory-item">
+                    <a href="/accb_food.vn" underline="none">Home</a>
+                  </li>
                 <li class="Navbar-Directory-item">Dishes</li>
                 <li class="Navbar-Directory-item">Review</li>
-                <li class="Navbar-Directory-item">About us</li>
             </ul>
 
             <div class="Navbar-Search">
@@ -50,6 +51,13 @@
                     <a href="/accb_food.vn/profile">
                         <i class="fa-regular fa-user"></i>
                     </a>
+                </div>
+                <div class="Nav-Subnav-love">
+                    <form action="/process_sign_out">
+                        <button>
+                          <i class="fa-solid fa-arrow-right-from-bracket"></i>
+                        </button>
+                      </form>
                 </div>
             </div>
         </nav>
